Fix screen flicker

--- a/src/assets/css/nav.css
+++ b/src/assets/css/nav.css
@@ -32,6 +32,10 @@ nav > .wrapper {
 }
 
 @media(max-width: 800px) {
+  nav {
+    padding: 15px 0;
+  }
+  
   .mobile-menu {
     display: flex;
     justify-content: flex-end;
